@@ -9,41 +9,48 @@ import org.jetbrains.annotations.Range;
 
 import java.util.List;
 
-public record GameProperties(Identifier id, List<StageInfo> stages) {
+public record GameProperties(Identifier id, List<StageInfo> stages, Duration timeout) {
     public static final Codec<GameProperties> CODEC = RecordCodecBuilder.create(instance -> instance.group(
             Identifier.CODEC.fieldOf("id").forGetter(GameProperties::id),
-            StageInfo.CODEC.listOf().fieldOf("stages").forGetter(GameProperties::stages)
+            StageInfo.CODEC.listOf().fieldOf("stages").forGetter(GameProperties::stages),
+            Duration.CODEC.fieldOf("timeout").forGetter(GameProperties::timeout)
     ).apply(instance, GameProperties::new));
 
-    public static final GameProperties NORMAL_PRESET = new GameProperties(new Identifier("battlegrounds", "normal"), ImmutableList.of(
-            new StageInfo(
-                    new Identifier("battlegrounds", "develop"),
-                    5000, 500, 2,
-                    new StageInfo.ResizeTimeInfo(
-                            Duration.withMinutes(4),
-                            Duration.withMinutes(3)
+    public static final List<GameProperties> DEFAULT_PROFILES = List.of(
+            new GameProperties(
+                    new Identifier("battlegrounds", "normal"),
+                    ImmutableList.of(
+                            new StageInfo(
+                                    new Identifier("battlegrounds", "develop"),
+                                    5000, 500, 2,
+                                    new StageInfo.ResizeTimeInfo(
+                                            Duration.withMinutes(4),
+                                            Duration.withMinutes(3)
+                                    ),
+                                    false
+                            ),
+                            new StageInfo(
+                                    new Identifier("battlegrounds", "enable_pvp"),
+                                    4000, 500, 2,
+                                    new StageInfo.ResizeTimeInfo(
+                                            Duration.withMinutes(3),
+                                            Duration.withMinutes(2)
+                                    ),
+                                    false
+                            ),
+                            new StageInfo(
+                                    new Identifier("battlegrounds", "deathmatch"),
+                                    1000, 200, 2,
+                                    new StageInfo.ResizeTimeInfo(
+                                            Duration.withMinutes(3),
+                                            Duration.withMinutes(2)
+                                    ),
+                                    false
+                            )
                     ),
-                    false
-            ),
-            new StageInfo(
-                    new Identifier("battlegrounds", "enable_pvp"),
-                    4000, 500, 2,
-                    new StageInfo.ResizeTimeInfo(
-                            Duration.withMinutes(3),
-                            Duration.withMinutes(2)
-                    ),
-                    false
-            ),
-            new StageInfo(
-                    new Identifier("battlegrounds", "deathmatch"),
-                    1000, 200, 2,
-                    new StageInfo.ResizeTimeInfo(
-                            Duration.withMinutes(3),
-                            Duration.withMinutes(2)
-                    ),
-                    false
+                    Duration.withMinutes(15)
             )
-    ));
+    );
 
     public record StageInfo(Identifier trigger, int initialSize, int resizeBlocks,
                             @Range(from = 1, to = Integer.MAX_VALUE) int resizeCount, ResizeTimeInfo resizeTimeInfo,
